--- a/style.css
+++ b/style.css
@@ -136,11 +136,9 @@ height: 104px;
    }
    .players , .blogs, .courses
      {
-       grid-template-columns: repeat(1, 1fr);
-      
-       
-      
+       grid-template-columns: repeat(1, 1fr);    
    }
+   main{background-color: #AEAEAE;}
 .section-title{text-align: center;
                 font-size: 2em;                 }
     .player ,.blogs{
